--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="container">
-          <p>Show Notification</p>
+     <div class="container" id="notificationContainer">
+        <p id="notificationTrigger" style="cursor: pointer;">Show Notification</p>
     </div>
+
+    <div id="notifications"></div>
+
+
+
+    <script src="main.js"></script>
     
 </body>
 </html>
